--- a/src/scss/partials/_block-ssn.scss
+++ b/src/scss/partials/_block-ssn.scss
@@ -664,7 +664,7 @@
       margin: auto 0 auto 20px;
       width: 100%;
       height: 350px;
-      background: url('/nottingham/notts-food-rota.jpg') center top no-repeat;
+      background: url('/nottingham/notts-food-rota.jpg') center;
       box-shadow: 5px 5px 5px 5px rgba(10, 133, 100, 0.2);
       transition: 0.3s ease-in;
 
@@ -692,7 +692,8 @@
       margin: auto 0 auto 20px;
       width: 100%;
       height: 350px;
-      background: url('/chelmsford/chelmsford-food-rota.jpg') center top no-repeat;
+      background-color: red;
+      background: url('/chelmsford/chelmsford-food-rota.jpg') center;
       box-shadow: 5px 5px 5px 5px rgba(10, 133, 100, 0.2);
       transition: 0.3s ease-in;
 
