adds cost of living banner

--- a/src/pages/chelmsford/index.hbs
+++ b/src/pages/chelmsford/index.hbs
@@ -36,6 +36,15 @@ location: chelmsford
 
 <div id="js-swep-output"></div>
 
+<div class="cta--money-advice">
+  <div class="container text-center">
+    <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">Worried about the cost of living crisis?</p>
+    <a href="/chelmsford/money-help-services" class="btn btn--brand-h">
+      <span class="btn__text">Get advice now</span>
+    </a>
+  </div>
+</div>
+
 <div class="block block--light-highlight">
   <div class="container">
     <div class="block__content text-center">
