updates salford swep

--- a/src/pages/salford/severe-weather-accommodation/index.hbs
+++ b/src/pages/salford/severe-weather-accommodation/index.hbs
@@ -26,20 +26,21 @@ location: salford
 <div class="block">
   <div class="container">
     <div class="block__content">
-      
-      <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
 
-      <p>Please contact: <a href="https://goo.gl/maps/yiQ7umWhM742">Salford Housing Options, 7 Wesley Street, Swinton. M27 6AD</a></p>
+      <p>During periods of severe cold weather, additional emergency accommodation is provided by councils.</p>
+      <p>This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="/greater-manchester">streetsupport.net/gm</a>.</p>
+      <p>Please contact: <a href="https://goo.gl/maps/yiQ7umWhM742">Salford Housing Options</a>, Ground floor, Civic Centre, Chorley road, Swinton, M27 5DA.</p>
+      <p>Opening times:</p>
       <ul>
-        <li>Opening hours: Mon, Tues, Thurs, Fri: 08:30am – 4:30pm</li>
-        <li>Wed: 1pm – 4:30pm</li>
+        <li>Monday, Tuesday, Wednesday and Friday 08:30am – 4:30pm</li>
+        <li>Thursday 10:00am - 4:30pm</li>
         <li>Tel: <a href="tel:01616071620">0161 607 1620</a></li>
         <li>Out of hours: <a href="tel:01617948888">0161 794 8888</a></li>
       </ul>
-      
+
     </div>
 
     {{> social-share}}
-    
+
   </div>
 </div>
