adds robyn to team page

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -84,7 +84,15 @@ page: team
           <h2 class="h2">Bolakale Salau - Data Integrity Volunteer</h2><a href="mailto:bolakale@streetsupport.net">Contact Bolakale</a>
         </div>
         <p>Bolakale joined us in September 2022 as one of our Data Integrity Volunteers. His main task is work with our locations to ensure that organisational information is kept accurate and up-to-date.</p>
-        <p>Part data nerd, part creative, Bolakale's love for working with data comes from his experiences as a digital marketing specialist. He transitioned to Data Science while on a career break, and now spends his time poring through rows of data, with a cup of tea never too far away. </p>
+        <p>Part data nerd, part creative, Bolakale's love for working with data comes from his experiences as a digital marketing specialist. He transitioned to Data Science while on a career break, and now spends his time poring through rows of data, with a cup of tea never too far away.</p>
+      </article>
+
+      <article class="team__member">
+        <div class="team__member-title team__member-title--robyn">
+          <h2 class="h2">Robyn Hampson - Data Integrity Volunteer</h2><a href="mailto:robyn@streetsupport.net">Contact Robyn</a>
+        </div>
+        <p>Robyn joined us in November 2022 as one of our Data Integrity Volunteers. She will be helping to ensure that all information is accurate and up to date.</p>
+        <p>I am a data-loving adventurer seeking new ways to use my skills for good. The common thread in my long and varied career has been my desire to analyse and improve the way things are done.  If I can connect those fostering kindness and goodwill with those in need, then I have done well.</p>
       </article>
 
       {{> divider }}
