--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -88,6 +88,14 @@ page: team
       </article>
 
       <article class="team__member">
+        <div class="team__member-title team__member-title--francisca">
+          <h2 class="h2">Francisca Umeonusulu - Data Integrity Volunteer</h2><a href="mailto:robyn@streetsupport.net">Contact Francisca</a>
+        </div>
+        <p>Francisca joined us in October 2022 as one of our Data Integrity Volunteers. She will be helping to ensure that all information is accurate and up to date.</p>
+        <p>My educational background is in Business and Project Management. I pride myself on being an easy-going and reliable individual. I am keen on making a difference and supporting my local community through volunteering.</p>
+      </article>
+
+      <article class="team__member">
         <div class="team__member-title team__member-title--robyn">
           <h2 class="h2">Robyn Hampson - Data Integrity Volunteer</h2><a href="mailto:robyn@streetsupport.net">Contact Robyn</a>
         </div>
