adds new team page

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -19,96 +19,183 @@ page: team
   </div>
 </div>
 
-<div class="block block--header">
+<div class="block block--our-team">
   <div class="container">
-    <h1 class="h1 block__header">Our Team</h1>
+    <div class="block__content">
+        <h1 class="h1">Our Core Team</h1>
+        <p>We’re your everyday people, your first port of call. We cover a fair bit between us, so please get in touch with whatever you need.</p>
+        <div class="team-card-container">
+          <div class="team-card">
+            <img class="team-card__img" src="/assets/img/mugshots/gary-dunstan.jpg" alt="">
+            <h1 class="team-card__heading">Gary Dunstan</h1>
+            <h2 class="team-card__subheading">Co-Founder</h2>
+            <p class="team-card__content">Gary leads on connecting and supporting partnerships in our locations, with a focus on new cities and regions, and around engaging businesses.</p>
+            <a href="mailto:gary@streetsupport.net">Contact Gary</a>
+          </div>
+
+          <div class="team-card">
+            <img class="team-card__img" src="/assets/img/mugshots/soraya.jpg" alt="">
+            <h1 class="team-card__heading">Soraya Sheikh</h1>
+            <h2 class="team-card__subheading">Network Manager</h2>
+            <p class="team-card__content">Soraya works alongside Gary connecting and supporting partnerships in our locations, with a focus on harnessing the power of the network nationally by sharing knowledge, activities and best practice.</p>
+            <a href="mailto:soraya@streetsupport.net">Contact Soraya</a>
+          </div>
+
+          <div class="team-card">
+            <img class="team-card__img" src="/assets/img/mugshots/james-cross.jpg" alt="">
+            <h1 class="team-card__heading">James Cross</h1>
+            <h2 class="team-card__subheading">Website Developer</h2>
+            <p class="team-card__content">James provides support to locations and organisations with creating useful pathways with which our users can access information.</p>
+            <a href="mailto:james@streetsupport.net">Contact James</a>
+          </div>
+
+          <div class="team-card">
+            <img class="team-card__img" src="/assets/img/mugshots/mara.jpg" alt="">
+            <h1 class="team-card__heading">Mara Patraiko</h1>
+            <h2 class="team-card__subheading">Comms & Engagement</h2>
+            <p class="team-card__content">Mara comes to us from a background of marketing after she decided that the charity sector is where she wants to be. Mara designs and delivers all things communication and content.</p>
+            <a href="mailto:mara@streetsupport.net">Contact Mara</a>
+          </div>
+        </div>
+    </div>
   </div>
 </div>
+
+<div class="block block--our-team">
+  <div class="container">
+    <div class="block__content">
+      <h1 class="h1">Our Partnership Co-ordinators</h1>
+      <p>Based within their respective areas but with one foot in our door, our partnership coordinators work alongside us to build local networks and continually support the homelessness sector in their locations.</p>
+      <div class="team-card-container">
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/eliz.jpg" alt="">
+          <h1 class="team-card__heading">Eliz Hopkins</h1>
+          <h2 class="team-card__subheading">West Midlands</h2>
+          <p class="team-card__content">Eliz has been working in an administrative capacity for the homelessness charity Crisis at their Skylight service in Birmingham since 2018. Eliz took on the role of Street Support Network Coordinator for the West Midlands in August 2021</p>
+          <a href="mailto:westmidlands@streetsupport.net">Contact Eliz</a>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/philippa.jpg" alt="">
+          <h1 class="team-card__heading">Philippa Iwnicki</h1>
+          <h2 class="team-card__subheading">Greater Manchester</h2>
+          <p class="team-card__content">Philippa’s lived in Manchester all her life and has worked across a range of different sectors within Housing and Homelessness. As the GMHAN co-ordinator, Philippa is working to build on the partnership network across Greater Manchester.</p>
+          <a href="mailto:info@gmhan.net">Contact Philippa</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="block block--our-team">
+  <div class="container">
+    <div class="block__content">
+      <h1 class="h1">Our location’s contacts</h1>
+      <p>We’re so lucky to be supported by a host of brilliant people who manage their local Street Support networks. If your query is about a specific location, get in touch with them - you’ll be in great hands.</p>
+      <div class="team-card-container">
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/tim.jpg" alt="">
+          <h1 class="team-card__heading">Tim Jones</h1>
+          <h2 class="team-card__subheading">Brighton & Hove</h2>
+          <p class="team-card__content">Tim Jones is City Administrator for Street Support in Brighton and Hove where he has lived for the best part of two decades. Tim came to Brighton to pursue a first degree in Computer Science and works as a pastor and teacher for Emmanuel church.</p>
+          <a href="mailto:brightonandhove@streetsupport.net">Contact Tim</a>
+        </div>
+
+        {{!-- <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/helen.jpg" alt="">
+          <h1 class="team-card__heading">Helen Wilkenson</h1>
+          <h2 class="team-card__subheading">Chelmsford</h2>
+          <p class="team-card__content">Helen first started volunteering with Cool to be Kind, helping with their marketing and raising awareness regarding the setting up and the launch of Street Support Chelmsford. She provides support for the organisations listed on Street Support Chelmsford site and is a key contact for the Chelmsford Street Support network.</p>
+          <a href="mailto:chelmsford@streetsupport.net">Contact Helen</a>
+        </div> --}}
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/crispin.jpg" alt="">
+          <h1 class="team-card__heading">Crispin Pailing</h1>
+          <h2 class="team-card__subheading">Liverpool</h2>
+          <p class="team-card__content">Crispin works in the voluntary and charitable sector and leads a multi-agency campaign group called Change Liverpool, bringing together business, charity and local authority stakeholders for a coordinated approach to homelessness and rough sleeping in Liverpool.</p>
+          <a href="mailto:liverpool@streetsupport.net">Contact Cripsin</a>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/tim-a.jpg" alt="">
+          <h1 class="team-card__heading">Tim Archibold</h1>
+          <h2 class="team-card__subheading">Luton</h2>
+          <p class="team-card__content">Tim joined Signposts in July 2016 as Operations Manager and took over as CEO in July 2020. He brings with him over 13 year's experience working in the sector, having held a senior leadership role with NOAH Enterprise and Luton Borough Council prior to joining the Signposts team.</p>
+          <a href="mailto:luton@streetsupport.net">Contact Tim</a>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/paul.jpg" alt="">
+          <h1 class="team-card__heading">Paul Scotting</h1>
+          <h2 class="team-card__subheading">Nottingham</h2>
+          <p class="team-card__content">After a career as a lecturer in Genetics, Paul is using his retirement to volunteer with several organisations working with homeless people. This has led to his roles in coordinating activities across the homelessness sector in Nottingham.</p>
+          <a href="mailto:nottingham@streetsupport.net">Contact Paul</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="block block--our-team">
+  <div class="container">
+    <div class="block__content">
+      <h1 class="h1">Our Volunteers</h1>
+      <p>Our band of volunteers handle all things data, and are crucial to the building of services on our site. If you have something you’d like our volunteers to work on, please <a href="mailto:soraya@streetsupport.net">contact Soraya</a>.</p>
+      <div class="team-card-container">
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/esther.jpg" alt="">
+          <h1 class="team-card__heading">Esther Cheng</h1>
+          <p class="team-card__content">Esther embraces the limitless possibilities in life. She constantly looks for opportunities to take part in social action and hopes to make a difference to the community she lives in.</p>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/bolakale.jpg" alt="">
+          <h1 class="team-card__heading">Bolakale Salau</h1>
+          <p class="team-card__content">Part data nerd, part creative, Bolakale's love for working with data comes from his experiences as a digital marketing specialist. He transitioned to Data Science while on a career break, and now spends his time poring through rows of data, with a cup of tea never too far away.</p>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/francisca.jpg" alt="">
+          <h1 class="team-card__heading">Francisca Umeonusulu</h1>
+          <p class="team-card__content">My educational background is in Business and Project Management. I pride myself on being an easy-going and reliable individual.</p>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/robyn.jpg" alt="">
+          <h1 class="team-card__heading">Robyn Hampson</h1>
+          <p class="team-card__content">I am a data-loving adventurer seeking new ways to use my skills for good. The common thread in my long and varied career has been my desire to analyse and improve the way things are done.  If I can connect those fostering kindness and goodwill with those in need, then I have done well.</p>
+        </div>
+
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/james-goddard.jpg" alt="">
+          <h1 class="team-card__heading">James Goddard</h1>
+          <p class="team-card__content">I recently graduated in Economics and Econometrics and have wanted to scratch my data handling itch since graduating. I feel happiest when I'm active and engaged, so I'm desperate to utilize my skills.</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="block">
   <div class="container">
     <div class="block__content">
 
-      <article class="team__member">
-        <div class="team__member-title team__member-title--gary">
-          <h2 class="h2">Gary Dunstan - Co-Founder</h2><a href="mailto:gary@streetsupport.net">Contact Gary</a>
-        </div>
-        <h4>Gary leads on connecting and supporting partnerships in our locations, with a focus on new cities and regions, and around engaging businesses.</h4>
-        <p>Gary has spent many years helping individuals and businesses with their ideas. Viv and Gary met at a social enterpreneurs event, and soon realised they shared the same core values, and had complimentary skills. The rest is history.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--soraya">
-          <h2 class="h2">Soraya Sheikh - Network Manager</h2><a href="mailto:soraya@streetsupport.net">Contact Soraya</a>
-        </div>
-        <h4>Soraya works alongside Gary connecting and supporting partnerships in our locations, with a focus on harnessing the power of the network nationally by sharing knowledge, activities and best practice.</h4>
-        <p>Soraya worked for the Manchester based homelessness charity, Mustard Tree — for six years. Initially coordinating their employment and life skills programme for vulnerable adults, and then as their Corporate Partnerships Manager. After taking a career break to travel and focus on self development, Soraya joined Street Support Network to bring her experience in building partnerships and fostering collaborative working.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--james">
-          <h2 class="h2">James Cross - Website Developer</h2><a href="mailto:james@streetsupport.net">Contact James</a>
-        </div>
-        <h4>James provides support to locations and organisations with creating useful pathways with which our users can access information.</h4>
-        <p>James came to us in summer 2018, he started helping out by creating organisation entries for Greater Manchester. He has now progressed to become the main person to co-ordinate all work that takes place involving the Street Support Network website. James works with new and existing locations to improve the way that local partnerships connect digitally.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--eliz">
-          <h2 class="h2">Eliz Hopkins - West Midlands Coordinator</h2><a href="mailto:westmidlands@streetsupport.net">Contact Eliz</a>
-        </div>
-        <h4>Eliz helps to build stronger partnerships and networks in West Midlands.</h4>
-        <p>Eliz has been working in an administrative capacity for the homelessness charity Crisis at their Skylight service in Birmingham since 2018. Eliz took on the role of Street Support Network Coordinator for the West Midlands in August 2021. As well as working for Crisis and Street Support, Eliz has also volunteered in Wolverhampton within the homelessness sector.  She is really excited to be involved so closely in the partnership between Street Support Network, Crisis Skylight Birmingham and the West Midlands Combined Authority's Homelessness Task Force. Eliz is passionate about ending homelessness and wants everyone to have a safe place they can call home.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--mara">
-          <h2 class="h2">Mara Patraiko - Comms & Engagement Coordinator</h2><a href="mailto:mara@streetsupport.net">Contact Mara</a>
-        </div>
-        <h4>Mara designs and delivers all things communication and content.</h4>
-        <p>Mara comes to us from a background of marketing after she decided that the charity sector is where she wants to be. Passionate about people and equality, she believes that raising awareness of how to help people experiencing homelessness is rooted in communication. In her other work, Mara runs journaling courses to promote mental wellbeing and writes fiction.</p>
-      </article>
-
-      <h2>Volunteers</h2>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--esther">
-          <h2 class="h2">Esther Cheng - Data Integrity Volunteer</h2><a href="mailto:esther@streetsupport.net">Contact Esther</a>
-        </div>
-        <p>Esther joined us in May 2022 as one of our Data Integrity Volunteers. Her main task is to collate information from organisations offering services across the UK.</p>
-        <p>Esther embraces the limitless possibilities in life. She constantly looks for opportunities to take part in social action and hopes to make a difference to the community she lives in. She is currently working on grant management in Hong Kong but would be moving to the UK in the near future.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--bolakale">
-          <h2 class="h2">Bolakale Salau - Data Integrity Volunteer</h2><a href="mailto:bolakale@streetsupport.net">Contact Bolakale</a>
-        </div>
-        <p>Bolakale joined us in September 2022 as one of our Data Integrity Volunteers. His main task is work with our locations to ensure that organisational information is kept accurate and up-to-date.</p>
-        <p>Part data nerd, part creative, Bolakale's love for working with data comes from his experiences as a digital marketing specialist. He transitioned to Data Science while on a career break, and now spends his time poring through rows of data, with a cup of tea never too far away.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--francisca">
-          <h2 class="h2">Francisca Umeonusulu - Data Integrity Volunteer</h2><a href="mailto:francisca@streetsupport.net">Contact Francisca</a>
-        </div>
-        <p>Francisca joined us in October 2022 as one of our Data Integrity Volunteers. She will be helping to ensure that all information is accurate and up to date.</p>
-        <p>My educational background is in Business and Project Management. I pride myself on being an easy-going and reliable individual. I am keen on making a difference and supporting my local community through volunteering.</p>
-      </article>
-
-      <article class="team__member">
-        <div class="team__member-title team__member-title--robyn">
-          <h2 class="h2">Robyn Hampson - Data Integrity Volunteer</h2><a href="mailto:robyn@streetsupport.net">Contact Robyn</a>
-        </div>
-        <p>Robyn joined us in November 2022 as one of our Data Integrity Volunteers. She will be helping to ensure that all information is accurate and up to date.</p>
-        <p>I am a data-loving adventurer seeking new ways to use my skills for good. The common thread in my long and varied career has been my desire to analyse and improve the way things are done.  If I can connect those fostering kindness and goodwill with those in need, then I have done well.</p>
-      </article>
-
       {{> divider }}
+
 
       <p>We also have help from some amazing digital experts as needed. Here are a few of the people that have helped us along the way&hellip;</p>
 
       <h2 class="h2">Vince Lee - Lead Developer</h2>
       <p>Vince is an experienced full stack developer who has led the development of Street Support Network from the start. He is a safe pair of hands, always reliable and dedicated to social change.</p>
+
+      <h1 class="h2">Oleksandr Seliuchenko - Freelance Developer</h1>
+      <p>In recent years, Sasha has helped us out with a lot specific development tasks and projects. He always seems to be there when we need him and we're hugely grateful for his support.</p>
 
       <h2 class="h2">Alex Atkinson - Designer</h2>
       <p>Alex is an experienced designer, generously giving his time for free to Street Support Network - we couldn't have done this without him!</p>
