--- a/src/scss/partials/_block-ssn.scss
+++ b/src/scss/partials/_block-ssn.scss
@@ -47,6 +47,11 @@
     }
   }
 
+  &--our-team {
+    padding-top: 30px !important;
+    padding-bottom: 0 !important;
+  }
+
   &--news {
     padding: 30px 10px;
   }
