--- a/src/scss/partials/_team.scss
+++ b/src/scss/partials/_team.scss
@@ -190,3 +190,9 @@
     background-image: url('/assets/img/mugshots/francisca.jpg')
   }
 }
+
+.team__member-title--francisca {
+  &::before, &::after {
+    background-image: url('/assets/img/mugshots/james-goddard.jpg')
+  }
+}
