adds solihull swep info

--- a/src/pages/solihull/severe-weather-accommodation/index.hbs
+++ b/src/pages/solihull/severe-weather-accommodation/index.hbs
@@ -26,10 +26,23 @@ location: solihull
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>During the winter months, emergency beds are available for rough sleepers.</p>
-      <p>Insert content here!</p>
+      <p>In Solihull SWEP arrangements will be in place during any period of cold or severe weather throughout the year. This protocol will be flexible based on empathy for people sleeping rough in severe weather, rather than sticking to a fixed approach. We shall consider factors such as wind chill, snow coverage and duration of extreme weather when considering SWEP activation.</p>
+      <h2 class="h2">Cold</h2>
+      <p>During periods of cold weather, SWEP will be activated when the night time temperature is predicted to reach 0°C or below for one night or more.</p>
+      <h2 class="h2">Heatwave</h2>
+      <p>SWEP will also be activated when temperatures are forecasted at 25°C or above for more than 2 consecutive days. When temperatures are due to be 30°C or more for one day SWEP will also be activated. The Council will also work with its partners to establish cool, shaded, or indoor areas where rough sleepers can take shelter from the heat if required.</p>
+      <h2 class="h2">Other weather</h2>
+      <p>SWEP will be activated when any other inclement weather conditions including snow, ice, rain and high winds or other weather conditions which are likely to put the lives of people sleeping rough at risk. It will be up to the SCH Homelessness and Housing Options Team to determine when the conditions have been met to operate SWEP.</p>
+      <h2 class="h2">The only conditions any identified rough sleeper must meet to qualify for assistance through SWEP are:</h2>
+      <ul>
+        <li>They must be at risk if they continue to sleep rough during the course of the severe weather</li>
+        <li>They must have nowhere available to them to sleep indoors during the course of the severe weather (indoors does not include cars, shed or garages)</li>
+        <li>They must agree to assistance under the SWEP procedure</li>
+      </ul>
+      <p>Should you require accommodation you can contact Solihull Community Housing on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) Any partner organisation or member of the public who identify a rough sleeper / potential rough sleeper can also contact StreetLink on <a href="tel:0300 500 0914">0300 500 0914</a> or SCH on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) or in an emergency the Police and other emergency services as appropriate).</p>
+      <p>If you are worried about someone you've seen sleeping rough in Solihull, you can alert Solihull’s Rough Sleeper Outreach Service via Streetlink by downloading the Streetlink app or by calling <a href="tel:0300 500 0914">0300 500 0914</a>.</p>
 
     {{> social-share}}
-    
+
   </div>
 </div>
