adds oldham swep

--- a/src/pages/oldham/severe-weather-accommodation/index.hbs
+++ b/src/pages/oldham/severe-weather-accommodation/index.hbs
@@ -26,20 +26,18 @@ location: oldham
 <div class="block">
   <div class="container">
     <div class="block__content">
-      
-      <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="http://streetsupport.net/gm">streetsupport.net/gm</a>.</p>
-
-      <p>When there is severe weather, additional emergency beds are made available for people to move inside.</p>
+      <p>During periods of severe cold weather, additional emergency accommodation is provided by councils. This winter, we are aiming to provide A Bed Every Night for people who are rough sleeping in Greater Manchester. Find out more at <a href="/greater-manchester">streetsupport.net/gm</a>.</p>
+      <p>When there is severe weather, additional emergency beds are made available for people to move inside. If you need support, please visit or call the Housing Options Team at Oldham Council.</p>
       <ul>
-        <li>Visit Oldham council town hall</li>
-        <li>Mon-Fri 10am-1pm and 2-4pm call <a href="tel:01613937117">0161 393 7117</a></li>
-        <li>Outside those hours in an emergency call <a href="tel:08009887061">0800 988 7061</a></li>
-        <li>Email <a href="mailto:housingoptions@fcho.co.uk">housingoptions@fcho.co.uk</a></li>
+        <li>Opening times: Monday, Tuesday, Thursday and Friday - 08:40 am - 05:00pm and Wednesday 09:30am - 05:00pm</li>
+        <li>Contact Number: <a href="tel:0161 770 4605">0161 770 4605</a>.</li>
+        <li>Email: <a href="mailto:housing.options@oldham.gov.uk">housing.options@oldham.gov.uk</a>.</li>
+        <li>If your enquiry is in relation to Homelessness there is an Out of Hours telephone for emergency enquiries. This number is <a href="tel:0800 988 7061">0800 988 7061</a>.</li>
       </ul>
-      
+
     </div>
 
     {{> social-share}}
-    
+
   </div>
 </div>
